--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "url": "https://github.com/northcoders/be-nc-games/issues"
   },
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "pg": "^8.7.1",
+    "pg-format": "^1.0.4"
+  },
+  "devDependencies": {
+    "jest": "^27.2.0",
+    "jest-sorted": "^1.0.12",
+    "supertest": "^6.1.6"
+  }
 }
