--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "jest": "^27.2.0",
     "jest-sorted": "^1.0.12",
     "supertest": "^6.1.6"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
   }
 }
