--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-list-endpoints": "^6.0.0",
     "pg": "^8.7.1",
     "pg-format": "^1.0.4"
   },
