--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -28,3 +28,17 @@ jobs:
 
       - name: Run tests
         run: PGDATABASE=nc_games_test PGUSER=test_user PGPASSWORD=test_password npm t
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.e18634a8-8304-4d34-8762-299ff8dde38e }}
+          heroku_app_name: ${{ secrets.nc-board-quest }}
+          heroku_email: ${{ secrets.jclleggett@gmail.com }}
